# touchpad-mobile

./: .env.template  .gitignore  Cargo.toml  README.md  build_proto.sh  execution_params.toml  execution_params.toml.template  rustfmt.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/fanickzz/touchpad/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fanickzz/touchpad/: MainActivity.kt
android/app/src/main/java/com/fanickzz/touchpad/data/: Device.kt  NetworkServiceDiscoveryViewModel.kt
android/app/src/main/java/com/fanickzz/touchpad/network/: QuicClient.kt
android/app/src/main/java/com/fanickzz/touchpad/ui/theme/: Color.kt  Theme.kt  TouchpadScreen.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/fanickzz/touchpad/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/protos/touchpad/v1/: HandshakeKt.proto.kt  HeartbeatKt.kt  HeartbeatOuterClassKt.proto.kt  HelloKt.kt  PointerKt.kt  TouchPacketKt.kt  TouchPacketOuterClassKt.proto.kt  WelcomeKt.kt  WrapperKt.kt  WrapperOuterClassKt.proto.kt
certs/: certificate.der  certificate.pem  private.key.pem  public.key.pem
protos/: discover_validation.proto  error_code.proto  handshake.proto  heartbeat.proto  register_device.proto  setting.proto  touch_packet.proto  wrapper.proto
server/: Cargo.toml
server/backend/: Cargo.toml  README.md
server/backend/src/: device.rs  discover_service.rs  latency.rs  lib.rs  touch_server.rs
server/backend/tests/: test.rs
server/cli/: Cargo.toml
server/cli/src/: main.rs
server/cli/tests/: config.yml  test.rs
server/core/: Cargo.toml
server/core-kit/: Cargo.toml
server/core-kit/src/: certificate.rs  client.rs  codec.rs  common.rs  config.rs  driver.rs  inner_const.rs  lib.rs  logger.rs  server.rs
server/core-kit/tests/: config.yml  test.rs
server/core/src/: config.rs  logger.rs
server/core/tests/: config.yml  test.rs
server/daemon/: Cargo.toml
server/daemon/logs/: touchpad.log.2025-10-05-16  touchpad.log.2025-10-05-17  touchpad.log.2025-10-05-18  touchpad.log.2025-10-06-06  touchpad.log.2025-10-06-15  touchpad.log.2025-10-06-16  touchpad.log.2025-10-07-02  touchpad.log.2025-10-07-03  touchpad.log.2025-10-07-04  touchpad.log.2025-10-07-05  touchpad.log.2025-10-07-06
server/daemon/src/: command.rs  main.rs
server/daemon/tests/: config.yml  test.rs
server/discover/: Cargo.toml  build.rs
server/discover/src/: discover_service.rs  lib.rs
server/discover/tests/: test.rs
server/touchpad-proto/: Cargo.toml  build.rs
server/touchpad-proto/src/: lib.rs
server/utils/: Cargo.toml
server/utils/src/: env.rs  lib.rs  rand.rs  sys.rs  token.rs
shared-utils/: Cargo.toml
shared-utils/src/: execute_params.rs  interface.rs  lib.rs
shared-utils/src/lang/: translate.rs
shared-utils/src/lang/assets/: en-US.txt  zh-CN.txt
touchpad-mobile/: Cargo.toml  Trunk.toml  components.d.ts  icon_generator.py  index.html  package.json  pnpm-lock.yaml  tsconfig.json  virtual.icons.css  vite.config.ts
touchpad-mobile/src/: App.vue  app.rs  main.rs  main.ts  style.css
touchpad-mobile/src-tauri/: Cargo.toml  tauri.conf.json
touchpad-mobile/src-tauri/capabilities/: default.json
touchpad-mobile/src-tauri/src/: command.rs  emit.rs  error.rs  lib.rs  main.rs  quic.rs  state.rs  types.rs  utils.rs
touchpad-mobile/src/app/: command.rs  components.rs  hook.rs  invoke.rs  main.rs  types.rs  utils.rs
touchpad-mobile/src/app/components/: discover_page.rs  navigation.rs
touchpad-mobile/src/components/: navigation.rs  page.vue
touchpad-mobile/src/ipc/: command.ts  listen.ts  types.ts
touchpad-mobile/src/router/: index.ts
touchpad-mobile/src/store/: device.ts  persistence.ts
touchpad-mobile/src/views/control/: index.vue
touchpad-mobile/src/views/control/components/: background.vue
touchpad-mobile/src/views/home/: index.vue
touchpad-mobile/src/views/home/about/: index.vue
touchpad-mobile/src/views/home/discover/: discover_device.vue  index.vue
touchpad-mobile/src/views/home/settings/: index.vue
touchpad-proto/: Cargo.toml  build.rs
touchpad-proto/src/: codec.rs  lib.rs
