[workspace.package]
name = "server"
version = "0.1.0"
edition = "2024"


[workspace]
members = [ "cli", "core", "daemon", "touchpad-proto"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.48" }
config = "0.15.17"
prost = "0.14.1"
quinn = "0.11.9"
serde = "1.0.227"
tokio = "1.47.1"
tracing = "0.1.41"
core = { path = "core"}
prost-build = "0.14.1"
cargo_metadata = "0.23.0"
tracing-subscriber = { version = "0.3.20"}
tracing-appender = "0.2.3"
chrono = "0.4.42"
