[workspace.package]
name = "server"
version = "0.1.0"
edition = "2024"


[workspace]
members = [ "cli", "core-kit", "discover", "touchpad-proto", "utils"]
resolver = "3"

[workspace.dependencies]

core-kit = { path = "core-kit"}
touchpad-proto = { path = "touchpad-proto"}
utils = { path = "utils"}
discover = { path = "discover"}

clap = { version = "4.5.48" }
config = "0.15.17"
prost = "0.14.1"
quinn = "0.11.9"
serde = "1.0.227"
tokio = "1.47.1"
tracing = "0.1.41"
prost-build = "0.14.1"
cargo_metadata = "0.23.0"
tracing-subscriber = { version = "0.3.20"}
tracing-appender = "0.2.3"
chrono = "0.4.42"
anyhow = "1.0.100"
prost-reflect = { version = "0.16.2", features = ["derive"] }
prost-types = "0.14.1"
prost-reflect-build = "0.16.0"
once_cell = "1.21.3"
phf = "0.13.1"
rcgen = "0.14.5"
libmdns = "0.10.1"
local-ip-address = "0.6.5"
rand = "0.9.2"
dotenvy = "0.15.7"
xxhash-rust = "0.8.15"
drm = "0.14.1"
libdisplay-info = "0.3.0"
smithay = "0.7.0"
