[package]
name = "shared-utils"
version.workspace = true
edition.workspace = true

[dependencies]
sys-locale = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mdns-sd = { workspace = true }
pnet = { workspace = true }
