[package]
name = "touchpad-mobile-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
reactive_stores = "0.3.1"
leptos_router = "0.7.0-rc1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
thaw = { version = "0.4.8", features = ["csr"] }
leptos_meta = "0.8.5"
icondata = { version = "0.6.0", features = ["bootstrap-icons"]}
icondata_core = "0.1.0"
futures = "0.3.31"

log = { workspace = true }

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features=["core", "event"] }

# self
shared-utils = { workspace = true }
