[package]
name = "server-backend"
version.workspace = true
edition.workspace = true

[dependencies]
libmdns = { workspace = true }
tokio = { workspace = true, features = ["full"] }
local-ip-address = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# workspace crate
server-utils = { workspace = true }
server-core-kit = { workspace = true }
shared-utils = { workspace = true }
touchpad-proto = { workspace = true }
mdns-sd = { workspace = true }
quinn = { workspace = true }
base64 = { workspace = true }
