[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"]}
config = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing-appender = { workspace = true }
chrono = { workspace = true }

server-core-kit = { workspace = true }
server-backend = { workspace = true }
server-utils = { workspace = true }
shared-utils = { workspace = true }
