[package]
name = "server-core-kit"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
config = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true , features=["fs", "macros"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
tracing-appender = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
touchpad-proto = { workspace = true }
rcgen = { workspace = true }
pem = { workspace = true }
directories-next = { workspace = true }
evdev = { workspace = true }
num_enum = { workspace = true }
