[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
config = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
tracing-appender = { workspace = true }
chrono = { workspace = true }
