[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"]}
tokio = { workspace = true ,features = ["rt", "rt-multi-thread", "time", "macros", "test-util"] }
core-kit = { workspace = true }
tracing = { workspace = true }
