[package]
name = "touchpad-mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "touchpad_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = { workspace = true }
tauri-plugin-log = { version = "2" }
thiserror = "2.0.17"
ipconfig = "0.3.2"
chrono = "0.4.42"
fern = { version = "0.7.1", features = ["colored"] }
anyhow = "1.0.100"
xxhash-rust = { workspace = true, features = ["xxh3"] }
rand = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }
log = {workspace = true }
tauri-plugin-os = "2"
quinn = { workspace = true }
prost = { workspace = true }
tauri-plugin-notification = "2"
tauri-plugin-toast = "0.0.2"
tauri-plugin-orientation = { git = "https://github.com/Fanick-ZJ/tauri-plugin-orientation.git", branch = "main" }

# self
shared-utils = { workspace = true }
touchpad-proto = { workspace = true }
